# c-mysql-connector-project

./: .gitignore  CMakeLists.txt
client_app/: CMakeLists.txt  main.cpp
cook&barman_app/: main.cpp
menu/: CMakeLists.txt  main.cpp
restaurant_app/: CMakeLists.txt  main.cpp
